# django-admin-select2-for-large-number-of-objects

./: pyproject.toml
myproj/myapp/: admin.py  models.py
myproj/myapp/migrations/: 0001_initial.py  0002_auto_20200804_1111.py
myproj/myproj/: settings.py
