[tool.poetry]
name = "django-admin-select2-for-large-number-of-objects"
version = "0.1.0"
description = ""
authors = ["Yusuke Muraoka <yusuke@yarch.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
